@@ -4,6 +4,7 @@ git-annex (10.20250722) UNRELEASED; urgency=medium
     provided by external commands git-annex-p2p-<netname>
   * Added git-remote-p2p-annex, which allows git pull and push to
     P2P networks provided by commands git-annex-p2p-<netname>
+  * stack.yaml: Update to lts-24.2.
 
  -- Joey Hess <id@joeyh.name>  Wed, 30 Jul 2025 13:45:42 -0400
 
